--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -917,6 +917,26 @@ console.log(result);
 
 ```
 
+## 20. 有效的括号
+
+给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。
+
+有效字符串需满足：
+
+左括号必须用相同类型的右括号闭合。
+左括号必须以正确的顺序闭合。
+
+提示：
+
+1 <= s.length <= 104
+s 仅由括号 '()[]{}' 组成
+
+栈实现
+
+```js
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
@@ -1602,7 +1622,7 @@ var dayOfYear = function(date) {
     return total;
 };
 
-let str1 = "2021-12-21";
+let str1 = "2022-01-01";
 
 let result=dayOfYear(str1);
 console.log(result);
@@ -1719,4 +1739,41 @@ console.log(result);
 ```
 
 
+
+## 2022. 将一维数组转变成二维数组
+
+给你一个下标从 0 开始的一维整数数组 original 和两个整数 m 和  n 。你需要使用 original 中 所有 元素创建一个 m 行 n 列的二维数组。
+
+original 中下标从 0 到 n - 1 （都 包含 ）的元素构成二维数组的第一行，下标从 n 到 2 * n - 1 （都 包含 ）的元素构成二维数组的第二行，依此类推。
+
+请你根据上述过程返回一个 m x n 的二维数组。如果无法构成这样的二维数组，请你返回一个空的二维数组。
+
+提示：
+
+1 <= original.length <= 5 * 104
+1 <= original[i] <= 105
+1 <= m, n <= 4 * 104
+
+```js
+/**
+ * @param {number[]} original
+ * @param {number} m
+ * @param {number} n
+ * @return {number[][]}
+ */
+var construct2DArray = function(original, m, n) {
+	if (original.length!==m*n) {
+		return [];
+	}
+	let newArr=[];
+	for (let i=0;i<m;i++){
+		newArr.push(original.slice(i*n,(i+1)*n));
+	}
+	return newArr;
+};
+
+let str1=[1,2,3,4];
+let result=construct2DArray(str1,2,2);
+console.log(result);
+```
 
