--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -64,9 +64,8 @@ console.log(result);
  * @return {ListNode}
  */
 var addTwoNumbers = function(l1, l2) {
-    //直接在l1上操作
     let temp=0;
-    let head=l1;  //存储l1的头结点，方便返回
+    let head=l1;
 
     while (l1.next){
         if (l2.next) {
@@ -76,9 +75,8 @@ var addTwoNumbers = function(l1, l2) {
             l1=l1.next;
             l2=l2.next;
         }else{
-            //当l1更长时
-            temp+=l1.val+l2.val;  //计算l2的最后一个
-            l2.val=0;  //然后把l2值设置为0
+            temp+=l1.val+l2.val;
+            l2.val=0;  //
             l1.val=temp%10;
             temp=Math.floor(temp/10);
             l1=l1.next;
@@ -86,20 +84,18 @@ var addTwoNumbers = function(l1, l2) {
     }
 
     while(l2.next){
-        //当l2更长时
-        temp+=l1.val+l2.val;  //计算l1的最后一个
+        temp+=l1.val+l2.val;
         l1.val=temp%10;
-        l1.next=new ListNode();  //在l1后加next结点，值设为0
+        l1.next=new ListNode();
         l1=l1.next;
-        l1.val=0;  
+        l1.val=0;
         temp=Math.floor(temp/10);
         l2=l2.next;
     }
-    temp+=l1.val+l2.val;  //读取最后的一个，就算l1和l2刚好长度相同也一样
+    temp+=l1.val+l2.val;
     l1.val=temp%10;
     temp=Math.floor(temp/10);
     if (temp===1) {
-        //最后是否会进位
         l1.next=new ListNode();
         l1=l1.next;
         l1.val=1;
@@ -109,7 +105,7 @@ var addTwoNumbers = function(l1, l2) {
 };
 ```
 
-注意 当li.next()返回false后在后面的要计算当前位的值.
+链表连接可以优化代码
 
 
 
@@ -934,6 +930,180 @@ s 仅由括号 '()[]{}' 组成
 栈实现
 
 ```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isValid = function(s) {
+    if (s.length%2!==0) {
+        return false;
+    }
+    let leftBrackets=["(","[","{"];
+    let rightBrackets=[")","]","}"];
+
+    let stack=[];
+    for (let i=0;i<s.length;i++){
+        //是否是右括号
+        let index=rightBrackets.indexOf(s[i]);
+        if (index!==-1) {
+            //是右括号
+            if (stack.length===0) {
+                //如果栈为空，则不合法
+                return false;
+            }
+            //则去看栈顶是否相匹配
+            if (stack[stack.length-1]===leftBrackets[index]){
+                //如果匹配，则出栈
+                stack.pop();
+            }else{
+                //不匹配，则进栈
+                stack.push(s[i]);
+            }
+        }else{
+            //是左括号则直接进栈
+            stack.push(s[i]);
+        }
+        //console.log(stack);
+    }
+    if (stack.length===0) {
+        return true;
+    }else{
+        return false;
+    }
+};
+
+let str1 = "{[{{[{}]}[({[]})]}]}";
+let result=isValid(str1);
+console.log(result);
+```
+
+## 21.合并两个有序链表
+
+将两个升序链表合并为一个新的 升序 链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+提示：
+
+两个链表的节点数目范围是 [0, 50]
+-100 <= Node.val <= 100
+l1 和 l2 均按 非递减顺序 排列
+
+方法一：递归
+思路
+
+我们可以如下递归地定义两个链表里的 merge 操作（忽略边界情况，比如空链表等）：
+
+list1[0]+merge(list1[1:],list2)    ,list1[0]<list2[0]
+list2[0]+merge(list1,list2[1:])    ,otherwise
+
+也就是说，**两个链表头部值较小的一个节点与剩下元素的 merge 操作结果合并**。
+
+算法
+
+我们直接将以上递归过程建模，同时需要考虑边界情况。
+
+如果 l1 或者 l2 一开始就是空链表 ，那么没有任何操作需要合并，所以我们只需要返回非空链表。否则，我们要判断 l1 和 l2 哪一个链表的头节点的值更小，然后递归地决定下一个添加到结果里的节点。如果两个链表有一个为空，递归结束。
+
+```js
+var mergeTwoLists = function(list1, list2) {
+    //如果一个为空，则直接返回另一个
+    if (list1===null) {
+        return list2
+    }else if (list2===null) {
+        return list1;
+    }else if(list1.val<list2.val){
+        list1.next=mergeTwoLists(list1.next,list2);
+        return list1;
+    }else{
+        list2.next=mergeTwoLists(list1,list2.next);
+        return list2;
+    }
+};
+```
+
+复杂度分析
+
+- 时间复杂度：O(n + m)，其中 n 和 m 分别为两个链表的长度。因为每次调用递归都会去掉 l1 或者 l2 的头节点（直到至少有一个链表为空），函数 mergeTwoList 至多只会递归调用每个节点一次。因此，时间复杂度取决于合并后的链表长度，即 O(n+m)。
+- 空间复杂度：O(n + m)，其中 n 和 m 分别为两个链表的长度。递归调用 mergeTwoLists 函数时需要消耗栈空间，栈空间的大小取决于递归调用的深度。结束递归调用时 mergeTwoLists 函数最多调用 n+m次，因此空间复杂度为 O(n+m)。
+
+方法二：迭代
+思路
+
+我们可以用迭代的方法来实现上述算法。当 l1 和 l2 都不是空链表时，判断 l1 和 l2 哪一个链表的头节点的值更小，将较小值的节点添加到结果里，当一个节点被添加到结果里之后，将对应链表中的节点向后移一位。
+
+算法
+
+首先，我们设定一个哨兵节点 prehead ，这可以在最后让我们比较容易地返回合并后的链表。我们维护一个 prev 指针，我们需要做的是调整它的 next 指针。然后，我们重复以下过程，直到 l1 或者 l2 指向了 null ：如果 l1 当前节点的值小于等于 l2 ，我们就把 l1 当前的节点接在 prev 节点的后面同时将 l1 指针往后移一位。否则，我们对 l2 做同样的操作。不管我们将哪一个元素接在了后面，我们都需要把 prev 向后移一位。
+
+**在循环终止的时候， l1 和 l2 至多有一个是非空的**。由于输入的两个链表都是有序的，**所以不管哪个链表是非空的，它包含的所有元素都比前面已经合并链表中的所有元素都要大**。这意味着我们只需要简单地将非空链表接在合并链表的后面，并返回合并链表即可。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} list1
+ * @param {ListNode} list2
+ * @return {ListNode}
+ */
+function ListNode(val,next){
+    this.val = (val===undefined ? 0 : val)
+    this.next = (next===undefined ? null : next)
+}
+
+var mergeTwoLists = function(list1, list2) {
+    const head=new ListNode();
+    let list3=head;
+    while(list1!=null && list2!=null){
+        if (list1.val<list2.val) {
+            list3.next=list1;
+            list1=list1.next;
+        }else{
+            list3.next=list2;
+            list2=list2.next;
+        }
+        list3=list3.next;
+    }
+    // 合并后 l1 和 l2 最多只有一个还未被合并完，我们直接将链表末尾指向未合并完的链表即可
+    list3.next=list1===null ? list2:list1;
+    //注意返回的是什么
+    return head.next;
+};
+
+let str1 = [-9,3];
+let str2=[5,7];
+let list1=new ListNode();
+let list2=new ListNode();
+let head1=list1;
+let head2=list2;
+for (let i=0;i<str1.length;i++){
+    list1.val=str1[i];
+    list1.next=new ListNode();
+    list1=list1.next;
+}
+//console.log(head1);
+for (let i=0;i<str2.length;i++){
+    list2.val=str2[i];
+    list2.next=new ListNode();
+    list2=list2.next;
+}
+//console.log(head2);
+
+let result=mergeTwoLists(head1,head2);
+console.log(result);
+
+
+```
+
+复杂度分析
+
+- 时间复杂度：O(n + m)，其中 n 和 m 分别为两个链表的长度。因为每次循环迭代中，l1 和 l2 只有一个元素会被放进合并链表中， 因此 while 循环的次数不会超过两个链表的长度之和。所有其他操作的时间复杂度都是常数级别的，因此总的时间复杂度为 O(n+m)。
+
+- 空间复杂度：O(1)。我们只需要常数的空间存放若干变量。
+
+```
 
 ```
 
@@ -1036,6 +1206,66 @@ result=test.search("app");
 console.log(result);  //
 ```
 
+## 390. 消除游戏
+
+列表 arr 由在范围 [1, n] 中的所有整数组成，并按严格递增排序。请你对 arr 应用下述算法：
+
+- 从左到右，删除第一个数字，然后每隔一个数字删除一个，直到到达列表末尾。
+
+- 重复上面的步骤，但这次是从右到左。也就是，删除最右侧的数字，然后剩下的数字每隔一个删除一个。
+
+- 不断重复这两步，从左到右和从右到左交替进行，直到只剩下一个数字。
+
+给你整数 n ，返回 arr 最后剩下的数字。
+
+提示：
+
+1 <= n <= 10^9
+
+直接遍历数组删除会超时
+
+**方法一：等差数列模拟**
+
+![消除游戏等差数列模拟](E:\pogject\学习笔记\image\leetcode\消除游戏等差数列模拟.png)
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var lastRemaining = function(n) {
+    let a1=1;
+    //删除次数k,元素数目为cnt,首元素a1,末尾元素an,公差step
+    let k=0,cnt=n,step=1;
+    while(cnt>1){
+        if (k%2===0) {
+            // 正向
+            a1=a1+step;
+        }else{
+            //反向，得考虑奇数个或偶数个
+            a1=(cnt%2===0) ? a1 : a1+step;
+        }
+        k++;
+        //有符号右移由两个大于号（>>）表示
+        cnt=cnt>>1;
+        //左移操作符用两个小于号（<<）表示
+        step=step<<1;
+    }
+    
+    return a1;
+};
+
+
+console.log(lastRemaining(50));
+
+```
+
+复杂度分析
+
+- 时间复杂度：O(log n)，其中 n 为初始整数列表的元素数目。每次删除都会将元素数目减半，所以时间复杂度为 O(logn)。
+
+
+- 空间复杂度：O(1)。只需要使用常数的额外空间。
 
 
 ## 472. 连接词
