--- a/牛客/牛客前端基础编程题.md
+++ b/牛客/牛客前端基础编程题.md
@@ -860,7 +860,7 @@ function _date(number) {
     let minute=date.getMinutes();  //返回 Date 对象的分钟 (0 ~ 59)。
     let second=date.getSeconds();  //返回 Date 对象的秒数 (0 ~ 59)。
     let weekDay=date.getDay();  //从 Date 对象返回一周中的某一天 (0 ~ 6)。
-    let milliSecond=date.getMinutes();  //返回 Date 对象的毫秒(0 ~ 999)。
+    let milliSecond=date.getMilliseconds();  //返回 Date 对象的毫秒(0 ~ 999)。
 
     return year+"-"+month+"-"+day;
 }
