--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1107,7 +1107,180 @@ console.log(result);
 
 ```
 
+## 26.删除有序数组中的重复项
 
+给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+提示：
+
+0 <= nums.length <= 3 * 104
+-104 <= nums[i] <= 104
+nums 已按升序排列
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var removeDuplicates = function(nums) {
+    let start=0;
+    while(start<nums.length){
+        if (nums[start]===nums[start+1]) {
+            //删除重复中的后一个
+            nums.splice(start+1,1);
+        }else{
+            start++;
+        }
+    }
+    console.log(nums);
+    return nums.length;
+};
+
+
+let test=[0,0,1,1,1,2,2,3,3,4];
+let result=removeDuplicates(test);
+console.log(result);
+```
+
+![消除游戏等差数列模拟](E:\pogject\学习笔记\image\leetcode\双指针删除排序数组中的重复项.png)
+
+```js
+var removeDuplicates = function(nums) {
+    const n = nums.length;
+    if (n === 0) {
+        return 0;
+    }
+    let fast = 1, slow = 1;
+    while (fast < n) {
+        if (nums[fast] !== nums[fast - 1]) {
+            //如果不同，则赋值给前面的重复位或当前位
+            nums[slow] = nums[fast];
+            ++slow;
+        }
+        ++fast;
+    }
+    return slow;
+};
+```
+
+**把不相同的用来覆盖前面相同的，不涉及删除消耗相对较小**
+
+复杂度分析
+
+- 时间复杂度：O(n)，其中 n 是数组的长度。快指针和慢指针最多各移动 n 次。
+
+
+- 空间复杂度：O(1)。只需要使用常数的额外空间。
+
+
+## 27. 移除元素
+
+给你一个数组 nums 和一个值 val，你需要 原地 移除所有数值等于 val 的元素，并返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须仅使用 O(1) 额外空间并 原地 修改输入数组。
+
+元素的顺序可以改变。你不需要考虑数组中超出新长度后面的元素。
+
+**提示：**
+
+- `0 <= nums.length <= 100`
+- `0 <= nums[i] <= 50`
+- `0 <= val <= 100`
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} val
+ * @return {number}
+ */
+var removeElement = function(nums, val) {
+    const n = nums.length;
+    if (n === 0) {
+        return 0;
+    }
+    let flag=0;
+    let count=0;
+    while (flag < n-count) {
+        if (nums[flag]===val) {
+            //如果匹配则把后面的值赋值到这里判断
+            //只需移动元素匹配次数
+            nums[flag]=nums[n-1-count];
+            count++;
+        }else{
+            flag++;
+        }
+    }
+    console.log(nums);
+    return flag;
+};
+
+let test=[0,0,1,1,1,2,2,3,3,4];
+let result=removeElement(test,2);
+console.log(result);
+```
+
+![移除元素双指针](E:\pogject\学习笔记\image\leetcode\移除元素双指针.png)
+
+## 28. 实现 strStr()
+
+给你两个字符串 haystack 和 needle ，请你在 haystack 字符串中找出 needle 字符串出现的第一个位置（下标从 0 开始）。如果不存在，则返回  -1 。
+
+说明：
+
+当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
+
+对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与 C 语言的 strstr() 以及 Java 的 indexOf() 定义相符。
+
+```js
+/**
+ * @param {string} haystack
+ * @param {string} needle
+ * @return {number}
+ */
+var strStr = function(haystack, needle) {
+    if (haystack.length<needle.length) {return -1;}
+    if (needle==="") {return 0;}
+    if (haystack.length===needle.length && haystack===needle) {return 0;}
+    if (haystack.length===needle.length && haystack!==needle) {return -1;}
+    for (let i=0;i<haystack.length-needle.length+1;i++){
+        if (haystack[i]===needle[0]) {
+            let flag=true;
+            for (let j=1;j<needle.length;j++){
+                if (haystack[i+j]!==needle[j]){
+                    flag=false;
+                    break;
+                }
+            }
+            if (flag) {
+                return i;
+            }
+
+        }
+    }
+    return -1;
+};
+
+
+let str1 = "heffdddllo";
+let str2 = "ell";
+let result=strStr(str1,str2);
+console.log(result);
+
+```
+
+
+
+调用内置方法
+
+```js
+var strStr = function(haystack, needle) {
+    return haystack.indexOf(needle);
+};
+```
+
+### 
 
 ## 208. 实现 Trie (前缀树)
 
