--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1233,6 +1233,8 @@ console.log(result);
 
 对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与 C 语言的 strstr() 以及 Java 的 indexOf() 定义相符。
 
+![方法一：暴力匹配strStr](E:\pogject\学习笔记\image\leetcode\方法一：暴力匹配strStr.png)
+
 ```js
 /**
  * @param {string} haystack
@@ -1270,8 +1272,6 @@ console.log(result);
 
 ```
 
-
-
 调用内置方法
 
 ```js
@@ -1280,7 +1280,9 @@ var strStr = function(haystack, needle) {
 };
 ```
 
-### 
+![KMPStrStr](E:\pogject\学习笔记\image\leetcode\KMPStrStr.png)
+
+![KMPStrStr](E:\pogject\学习笔记\image\leetcode\KMPStrStr2.png)
 
 ## 208. 实现 Trie (前缀树)
 
@@ -2033,6 +2035,106 @@ console.log(result);
 
 **普通闰年:公历年份是4的倍数的，一般是闰年。（如2004年就是闰年）；
 世纪闰年:公历年份是整百数的，必须是400的倍数才是闰年（如1900年不是世纪闰年，2000年是世纪闰年）；**
+
+## 1185. 一周中的第几天
+
+给你一个日期，请你设计一个算法来判断它是对应一周中的哪一天。
+
+输入为三个整数：day、month 和 year，分别表示日、月、年。
+
+您返回的结果必须是这几个值中的一个 {"Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"}。
+
+输入：day = 31, month = 8, year = 2019
+输出："Saturday"
+
+题目规定输入的日期一定是在 1971 到 2100 年之间的有效日期，即在 1971 年 1 月 1日，到 2100 年 12 月 31 日之间。通过查询日历可知，1970 年 12 月 31 日是星期四，我们只需要算出输入的日期距离 1970 年 12 月 31 日有几天，再加上 3 后对 7求余，即可得到输入日期是一周中的第几天。
+
+求输入的日期距离 1970 年 12 月 31 日的天数，可以分为三部分分别计算后求和：
+
+（1）输入年份之前的年份的天数贡献；
+（2）输入年份中，输入月份之前的月份的天数贡献；
+（3）输入月份中的天数贡献。
+
+```js
+var isLeap=function(y){
+    let is_leap;//是否是闰年
+    if (y%400===0) {
+        is_leap=true;
+    }else if(y%4===0 && y%100!==0){
+        is_leap=true;
+    }else{
+        is_leap=false;
+    }
+    return is_leap;
+}
+
+/**
+ * @param {string} date
+ * @return {number}
+ */
+var dayOfYear = function(year,month,day) {
+    monthOfDays=[31,28,31,30,31,30,31,31,30,31,30,31];
+    let is_leap=isLeap(year);
+
+    let total=0;
+    for (let i=0;i<month-1;i++){
+        total+=monthOfDays[i]
+    }
+    total+=day;
+    if (month>2 && is_leap) {
+        total+=1;  //当2月后且是闰年再加一天
+    }
+    return total;
+};
+
+/**
+ * @param {number} day
+ * @param {number} month
+ * @param {number} year
+ * @return {string}
+ */
+var dayOfTheWeek = function(day, month, year) {
+    let date=new Date(year,month-1,day);
+    let weekdays=["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"];
+    let totalDays=0;
+    for(let y=1971;y<year;y++){
+        totalDays+=365;
+        if (isLeap(y)){
+            console.log(y);
+            totalDays+=1
+        }
+    }
+    totalDays+=dayOfYear(year,month,day)+3;
+    return weekdays[totalDays%7];
+};
+
+//let test=[0,0,1,1,1,2,2,3,3,4];
+let result=dayOfTheWeek(31,8,2019);
+console.log(result);
+```
+
+直接使用API
+
+```js
+/**
+ * @param {number} day
+ * @param {number} month
+ * @param {number} year
+ * @return {string}
+ */
+var dayOfTheWeek = function(day, month, year) {
+    let date=new Date(year,month-1,day);
+    let weekdays=["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+    let weekDay=date.getDay();  //从 Date 对象返回一周中的某一天 (0 ~ 6)。
+    return weekdays[weekDay];
+};
+
+//let test=[0,0,1,1,1,2,2,3,3,4];
+let result=dayOfTheWeek(31,8,2019);
+console.log(result);
+```
+
+
 
 ## 1705. 吃苹果的最大数目
 
