--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1284,6 +1284,318 @@ var strStr = function(haystack, needle) {
 
 ![KMPStrStr](E:\pogject\学习笔记\image\leetcode\KMPStrStr2.png)
 
+```js
+var strStr=function(haystack,needle){
+    const n=haystack.length,m=needle.length;
+    if (m===0) {
+        return 0;
+    }
+
+    const pi=new Array(m).fill(0);
+
+    //needle部分的前缀函数
+    for (let i=1,j=0;i<m;i++){
+        while (j>0 && needle[i]!=needle[j]){
+            j=pi[j-1];
+        }
+        if (needle[i]===needle[j]) {
+            j++;
+        }
+        pi[i]=j;
+    }
+
+    //求 haystack 部分的前缀函数
+    for (let i=0,j=0;i<n;i++){
+        while(j>0 && haystack[i]!=needle[j]){
+            j=pi[j-1];
+        }
+        if (haystack[i]==needle[j]) {
+            j++;
+        }
+        if (j===m) {
+            return i-m+1;
+        }
+    }
+    return -1;
+};
+
+```
+
+## 29.两数相除
+
+给定两个整数，被除数 dividend 和除数 divisor。将两数相除，要求不使用乘法、除法和 mod 运算符。
+
+返回被除数 dividend 除以除数 divisor 得到的商。
+
+整数除法的结果应当截去（truncate）其小数部分，例如：truncate(8.345) = 8 以及 truncate(-2.7335) = -2
+
+提示：
+
+被除数和除数均为 32 位有符号整数。
+除数不为 0。
+假设我们的环境只能存储 32 位有符号整数，其数值范围是 [−2^31,  2^31 − 1]。本题中，如果除法结果溢出，则返回 2^31 − 1。
+
+暴力解法，连减计数,会超时
+
+```
+
+```
+
+![两数相除二分查找](E:\pogject\学习笔记\image\leetcode\两数相除二分查找.png)
+
+
+
+```js
+/**
+ * @param {number} dividend
+ * @param {number} divisor
+ * @return {number}
+ */
+var divide = function(dividend, divisor) {
+    const MAX_VALUE=2**31-1;
+    const MIN_VALUE=-(2**31);
+
+    // 考虑被除数为最小值的情况
+    if (dividend===MIN_VALUE) {
+        if (divisor===1) {
+            //直接返回答案-2^31
+            return MIN_VALUE;
+        }
+        if (divisor===-1) {
+            //为2^31,产生了溢出。此时我们需要返回2^31-1
+            return MAX_VALUE;
+        }
+    }
+
+    //考虑除数为最小值的情况
+    if (divisor===MIN_VALUE) {
+        //被除数只有为MIN_VALUE时为1，其他都为0
+        return dividend===MIN_VALUE ? 1: 0;
+    }
+
+    // 考虑被除数为 0 的情况
+    if (dividend===0) {
+        return 0;
+    }
+
+    // 一般情况，使用二分查找
+    // 将所有的正数取相反数，这样就只需要考虑一种情况
+    let rev=false;
+    if(dividend>0){
+        dividend=-dividend;
+        rev=!rev;
+    }
+    if (divisor>0) {
+        divisor=-divisor;
+        rev=!rev;
+    }
+
+    //二分查找
+    let left=1;
+    let right=MAX_VALUE;
+    let ans=0;
+    while(left<=right){
+        //注意溢出，并且不能使用除法
+        const mid=left+((right-left)>>1);
+        const check=quickAdd(divisor,mid,dividend);
+        if (check) {
+            ans=mid;
+            // 注意溢出
+            if (mid===MAX_VALUE) {
+                break;
+            }
+            left=mid+1;
+        }else{
+            right=mid-1;
+        }
+    }
+    return rev ? -ans : ans;
+};
+
+// 快速乘
+const quickAdd=(y,z,x)=>{
+    // x 和 y 是负数，z 是正数
+    // 需要判断 z * y >= x 是否成立
+    let result=0;
+    let add=y;
+    while(z!==0){
+        if ((z&1)!==0) {
+            //需要保证 result + add >= x
+            if (result<x-add) {
+                return false;
+            }
+            result+=add;
+        }
+        if (z!==1) {
+            //需要保证 add + add >= x
+            if (add<x-add) {
+                return false;
+            }
+            add+=add;
+        }
+        // 不能使用除法
+        z>>=1;
+    }
+    return true;
+};
+
+let str1 = 10;
+let str2 = 3;
+let result=divide(str1,str2);
+console.log(result);
+```
+
+![两数相除二分查找](E:\pogject\学习笔记\image\leetcode\两数相除类二分查找.png)
+
+```js
+/**
+ * @param {number} dividend
+ * @param {number} divisor
+ * @return {number}
+ */
+var divide = function(dividend, divisor) {
+    const MAX_VALUE=2**31-1;
+    const MIN_VALUE=-(2**31);
+
+    // 考虑被除数为最小值的情况
+    if (dividend===MIN_VALUE) {
+        if (divisor===1) {
+            //直接返回答案-2^31
+            return MIN_VALUE;
+        }
+        if (divisor===-1) {
+            //为2^31,产生了溢出。此时我们需要返回2^31-1
+            return MAX_VALUE;
+        }
+    }
+
+    //考虑除数为最小值的情况
+    if (divisor===MIN_VALUE) {
+        //被除数只有为MIN_VALUE时为1，其他都为0
+        return dividend===MIN_VALUE ? 1: 0;
+    }
+
+    // 考虑被除数为 0 的情况
+    if (dividend===0) {
+        return 0;
+    }
+
+    // 一般情况，使用类二分查找
+    // 将所有的正数取相反数，这样就只需要考虑一种情况
+    let rev=false;
+    if(dividend>0){
+        dividend=-dividend;
+        rev=!rev;
+    }
+    if (divisor>0) {
+        divisor=-divisor;
+        rev=!rev;
+    }
+
+    //类二分查找
+    const candidates=[divisor];
+    let index=0;
+    //注意溢出
+    while(candidates[index]>=dividend-candidates[index]){
+        //处理的都是负数
+        candidates.push(candidates[index]+candidates[index]);
+        index++;
+    }
+    //console.log(candidates);
+    let ans=0;
+    console.log(ans,dividend);
+    for (let i=candidates.length-1;i>=0;--i){
+        if (candidates[i]>=dividend) {
+            ans+=1<<i;
+            dividend-=candidates[i];
+            console.log(ans,dividend);
+        }
+    }
+    return rev ? -ans : ans;
+};
+
+
+let str1 = 10000;
+let str2 = 33;
+let result=divide(str1,str2);
+console.log(result);
+```
+
+## 35. 搜索插入位置
+
+给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
+
+请必须使用时间复杂度为 O(log n) 的算法。
+提示:
+
+1 <= nums.length <= 10^4
+-10^4 <= nums[i] <= 10^4
+nums 为无重复元素的升序排列数组
+-10^4 <= target <= 10^4
+
+二分查找
+
+因此我们可以将两个条件合并得出最后的目标：「在一个有序数组中找第一个大于等于 target 的下标」。
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var searchInsert = function(nums, target) {
+    let left=0;
+    let right=nums.length-1;
+    let middle=Math.floor((right+left)/2);
+    //console.log(left,right,middle);
+    while(left<=right){
+        if (nums[middle]<target) {
+            left=middle+1;
+            middle=Math.floor((right+left)/2);
+        }else if (nums[middle]>target) {
+            right=middle-1;
+            middle=Math.floor((right+left)/2);
+        }else{
+            return middle;
+        }
+        //console.log(left,right,middle);
+    }
+    return middle+1;
+};
+
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var searchInsert = function(nums, target) {
+    let left=0;
+    let right=nums.length-1;
+    let middle=(right+left)>>1;
+    //console.log(left,right,middle);
+    while(left<=right){
+        if (nums[middle]<target) {
+            left=middle+1;
+            middle=(right+left)>>1;
+        }else if (nums[middle]>target) {
+            right=middle-1;
+            middle=(right+left)>>1;
+        }else{
+            return middle;
+        }
+        //console.log(left,right,middle);
+    }
+    return middle+1;
+};
+
+
+let test = [1,2,3,5,6,7,20,100,289,328];
+let result=searchInsert(test,1);
+console.log(result);
+```
+
+
+
 ## 208. 实现 Trie (前缀树)
 
 Trie（发音类似 "try"）或者说 前缀树 是一种树形数据结构，用于高效地存储和检索字符串数据集中的键。这一数据结构有相当多的应用情景，例如自动补完和拼写检查。
