--- a/学习记录.md
+++ b/学习记录.md
@@ -10,7 +10,8 @@
 
 2022.01.03
 
-力扣：获取一周的某一天，KMP前缀函数，两数相除（二分查找、类二分查找）,搜索插入位置(二分查找)
+力扣：获取一周的某一天，KMP前缀函数，两数相除（二分查找、类二分查找）,搜索插入位置(二分查找), 最大子数组和(动态规划,思考转移方方程如何写)
 
 牛客：js闭包，封装函数
 
+2022.01.04
