--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1594,6 +1594,45 @@ let result=searchInsert(test,1);
 console.log(result);
 ```
 
+## 53. 最大子数组和
+
+给你一个整数数组 nums ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+
+子数组 是数组中的一个连续部分。
+
+提示：
+
+1 <= nums.length <= 105
+-104 <= nums[i] <= 104
+
+进阶：如果你已经实现复杂度为 O(n) 的解法，尝试使用更为精妙的 分治法 求解。
+
+![最大子数组和动态规划](E:\pogject\学习笔记\image\leetcode\最大子数组和动态规划.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxSubArray = function(nums) {
+    //只有一个元素直接返回
+    if (nums.length===1) { return nums[0]; }
+
+    //动态规划
+    let pre=0;
+    let maxSum=nums[0];
+    nums.forEach((x)=>{
+        pre=Math.max(pre+x,x);
+        maxSum=Math.max(maxSum,pre);
+    })
+    return maxSum;
+};
+
+let test = [-2,1,-3,4,-1,2,1,-5,4];
+let result=maxSubArray(test,1);
+console.log(result);
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
