--- a/学习记录.md
+++ b/学习记录.md
@@ -15,3 +15,10 @@
 牛客：js闭包，封装函数
 
 2022.01.04
+
+力扣：猫和老鼠博弈游戏（动态规划求解)，（**这个比较难，后面还得继续看题解**）。
+
+牛客：js函数参数的组合，参数解构，apply，call，bind , 创建对象的方式（构造函数，原型，工厂方法，字面量)
+
+
+
