--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1636,6 +1636,194 @@ console.log(result);
 
 **方法二：分治**
 
+
+
+## 58. 最后一个单词的长度
+
+给你一个字符串 s，由若干单词组成，单词前后用一些空格字符隔开。返回字符串中最后一个单词的长度。
+
+单词 是指仅由字母组成、不包含任何空格字符的最大子字符串。
+
+提示：
+
+1 <= s.length <= 104
+s 仅有英文字母和空格 ' ' 组成
+s 中至少存在一个单词
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var lengthOfLastWord = function(s) {
+    let count=0;
+    for (let i=s.length-1;i>=0;i--){
+        //反向遍历
+        if(s[i]!==" "){
+            count++;
+        }else{
+            //如果前面是字母，则这里单词就结束
+            if (count>0) {
+                return count;
+            }
+        }
+    }
+    return count;
+};
+
+let test = "   fly me   to   the moon  ";
+let result=lengthOfLastWord(test);
+console.log(result);
+```
+
+## 66. 加一
+
+给定一个由 整数 组成的 非空 数组所表示的非负整数，在该数的基础上加一。
+
+最高位数字存放在数组的首位， 数组中每个元素只存储单个数字。
+
+你可以假设除了整数 0 之外，这个整数不会以零开头。
+提示：
+
+1 <= digits.length <= 100
+0 <= digits[i] <= 9
+
+```js
+/**
+ * @param {number[]} digits
+ * @return {number[]}
+ */
+var plusOne = function(digits) {
+    digits[digits.length-1]+=1;
+    for (let i=digits.length-1;i>0;i--){
+        if (digits[i]<10){
+            break;
+        }else{
+             digits[i]=0;
+             digits[i-1]+=1;
+        }
+    }
+    if (digits[0]===10) {
+        digits[0]=1;
+        digits[digits.length]=0;
+    }
+    return digits;
+};
+```
+
+## 67. 二进制求和
+
+给你两个二进制字符串，返回它们的和（用二进制表示）。
+
+输入为 非空 字符串且只包含数字 1 和 0。
+示例 1:
+
+输入: a = "11", b = "1"
+输出: "100"
+示例 2:
+
+输入: a = "1010", b = "1011"
+输出: "10101"
+
+
+提示：
+
+每个字符串仅由字符 '0' 或 '1' 组成。
+1 <= a.length, b.length <= 10^4
+字符串如果不是 "0" ，就都不含前导零。
+
+```js
+/**
+ * @param {string} a
+ * @param {string} b
+ * @return {string}
+ */
+var addBinary = function(a, b) {
+    if (a.length<b.length) {
+        //交换变量的值,解构赋值
+        [a,b]=[b,a];
+    }
+    let result=[];
+    let temp=0;
+    for(let i=0;i<b.length;i++){
+        //先遍历短的一个
+        temp+=Number(a[a.length-1-i])+Number(b[b.length-1-i])
+        result.unshift((temp%2).toString());
+        temp=temp>1 ? 1 : 0;
+    }
+
+    for(let j=a.length-b.length-1;j>=0;j--){
+        //继续遍历长的一个剩余的位
+        if (temp===1) {
+            temp+=Number(a[j]);
+            result.unshift((temp%2).toString());
+            temp=temp>1 ? 1 : 0;
+        }else{
+            result.unshift(a[j]);
+        }
+    }
+    if (temp===1) {
+        //最后是否需要进位
+        result.unshift("1")
+    }
+    return result.join("");
+};
+
+let test = "100";
+let result=addBinary(test,"110010");
+console.log(result);
+```
+
+考虑一个最朴素的方法：先将 a和 b转化成十进制数，求和后再转化为二进制数。
+
+方法二：位运算
+
+## 69. Sqrt(x)
+
+给你一个非负整数 x ，计算并返回 x 的 算术平方根 。
+
+由于返回类型是整数，结果只保留 整数部分 ，小数部分将被 舍去 。
+
+注意：不允许使用任何内置指数函数和算符，例如 pow(x, 0.5) 或者 x ** 0.5 。
+提示：
+
+0 <= x <= 2^31 - 1
+
+```js
+/**
+ * @param {number} x
+ * @return {number}
+ */
+var mySqrt = function(x) {
+    if (x<2) {
+        return x;
+    }
+    //因为只需要整数部分，所以只需要找到平方小于等于x的的最接近的一个整数
+    let left=1;
+    let right=x>>1;
+    let middle=(left+right)>>1;
+    //二分查找
+    while(left<=right){
+        //注意溢出
+        if (middle*middle>x) {
+            right=middle-1;
+        }else if (middle*middle<x) {
+            left=middle+1;
+        }else{
+            return middle;
+        }
+        middle=(left+right)>>1;
+    }
+    return middle;
+};
+
+let test = 3;
+let result=mySqrt(test);
+console.log(result);
+```
+
+
+
 ## 208. 实现 Trie (前缀树)
 
 Trie（发音类似 "try"）或者说 前缀树 是一种树形数据结构，用于高效地存储和检索字符串数据集中的键。这一数据结构有相当多的应用情景，例如自动补完和拼写检查。
