--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1822,6 +1822,89 @@ let result=mySqrt(test);
 console.log(result);
 ```
 
+牛顿迭代法，或其他函数代替
+
+## 70.爬楼梯
+
+假设你正在爬楼梯。需要 n 阶你才能到达楼顶。
+
+每次你可以爬 1 或 2 个台阶。你有多少种不同的方法可以爬到楼顶呢？
+
+注意：给定 n 是一个正整数。
+
+递归
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var climbStairs = function(n) {
+    if(n<3){
+        return n;
+    }else{
+        //找到规律
+        return climbStairs(n-1)+climbStairs(n-2);
+    }
+
+};
+
+let test = 5;
+let result=climbStairs(test);
+console.log(result);
+for (let i=1;i<20;i++){
+    console.log(climbStairs(i));
+}
+/*
+1
+2
+3
+5
+8
+13
+21
+34
+55
+*/
+```
+
+```js
+//动态规划
+var climbStairs = function(n) {
+    let p = 0, q = 0, r = 1;
+    for (let i = 1; i <= n; ++i) {
+        p = q;
+        q = r;
+        r = p + q;
+    }
+    return r;
+};
+
+```
+
+方法一：动态规划
+
+方法二：**矩阵快速幂**
+
+方法三：通项公式
+
+
+
+## 83.删除排序链表中的重复元素
+
+存在一个按升序排列的链表，给你这个链表的头节点 head ，请你删除所有重复的元素，使每个元素 只出现一次 。
+
+返回同样按升序排列的结果链表。
+提示：
+
+链表中节点数目在范围 [0, 300] 内
+-100 <= Node.val <= 100
+题目数据保证链表已经按升序排列
+
+```
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
