--- a/学习记录.md
+++ b/学习记录.md
@@ -16,7 +16,7 @@
 
 2022.01.04
 
-力扣：猫和老鼠博弈游戏（动态规划求解)，（**这个比较难，后面还得继续看题解**）。二进制求和（位运算）,sqrt(x)二分查找,
+力扣：猫和老鼠博弈游戏（动态规划求解)，（**这个比较难，后面还得继续看题解**）。二进制求和（位运算）,sqrt(x)二分查找, 爬楼梯(动态规划，递归,矩阵快速幂,通项公式)
 
 牛客：js函数参数的组合，参数解构，apply，call，bind , 创建对象的方式（构造函数，原型，工厂方法，字面量)
 
