--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1901,8 +1901,79 @@ var climbStairs = function(n) {
 -100 <= Node.val <= 100
 题目数据保证链表已经按升序排列
 
+方法一：一次遍历
+当我们遍历到链表的最后一个节点时，cur.next 为空节点，如果不加以判断，访问 cur.next 对应的元素会产生运行错误。因此我们只需要遍历到链表的最后一个节点，而不需要遍历完整个链表。
+
+```js
+var deleteDuplicates = function(head) {
+    if (!head) {
+        return head;
+    }
+
+    let cur = head;
+    while (cur.next) {
+        if (cur.val === cur.next.val) {
+            cur.next = cur.next.next;
+        } else {
+            cur = cur.next;
+        }
+    }
+    return head;
+};
+
 ```
 
+
+
+```js
+function ListNode(val,next){
+    this.val = (val===undefined ? 0 : val)
+    this.next = (next===undefined ? null : next)
+}
+
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var deleteDuplicates = function(head) {
+    if (head===null) {
+        //如果为空
+        return head;
+    }
+    let pre=head;
+    let temp=head.val;
+    while (head.next){
+        if (head.next.val===temp) {
+            //如果与前一个结点相同,跳过相同的那个
+            head.next=head.next.next;
+            //head=head.next;
+        }else{
+            //不同在移动到下一个
+            head=head.next;
+            temp=head.val;
+        }
+    }
+    return pre;
+};
+
+let str1 = [1,1,2,3,3];
+let list1=new ListNode();
+let head1=list1;
+for (let i=0;i<str1.length;i++){
+    list1.val=str1[i];
+    list1.next=new ListNode();
+    list1=list1.next;
+}
+//console.log(head1);
+let result=deleteDuplicates(head1)
+console.log(result);
 ```
 
 
@@ -2854,6 +2925,68 @@ var dayOfTheWeek = function(day, month, year) {
 //let test=[0,0,1,1,1,2,2,3,3,4];
 let result=dayOfTheWeek(31,8,2019);
 console.log(result);
+```
+
+## 1576.替换所有的问号
+
+给你一个仅包含小写英文字母和 '?' 字符的字符串 s，请你将所有的 '?' 转换为若干小写字母，使最终的字符串不包含任何 连续重复 的字符。
+
+注意：你 不能 修改非 '?' 字符。
+
+题目测试用例保证 除 '?' 字符 之外，不存在连续重复的字符。
+
+在完成所有转换（可能无需转换）后返回最终的字符串。如果有多个解决方案，请返回其中任何一个。可以证明，在给定的约束条件下，答案总是存在的。
+
+提示：
+
+1 <= s.length <= 100
+
+s 仅包含小写英文字母和 '?' 字符
+
+在替换时，实际不需要遍历所有的小写字母，只需要遍历三个互不相同的字母，就能保证一定找到一个与前后字符均不相同的字母，在此我们可以限定三个不同的字母为 (‘a’,‘b’,‘c’)。
+
+
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var modifyString = function(s) {
+    s=s.split("");
+    for (let i=0;i<s.length;i++){
+        if (s[i]==="?") {
+            if (s[i-1]!=="a" && s[i+1]!=="a") {
+                //前后都不为a则设为a
+                s[i]="a";
+            }else if (s[i-1]==="b" || s[i+1]==="b"){
+                //有一个a和一个b，则设为c
+                s[i]="c";
+            }else{
+                //前后都是a时,设为b
+                s[i]="b";
+            }
+        }
+    }
+    return s.join("");
+};
+
+let test = "aza??byw?ipkj?";
+let result=modifyString(test)
+console.log(result);
+
+//使用 charCodeAt()方法可以查看指定码元的字符编码。这个方法返回指定索引位置的码元值，索引以整数指定
+//fromCharCode()方法用于根据给定的 UTF-16 码元创建字符串中的字符。这个方法可以接受任意多个数值，并返回将所有数值对应的字符拼接起来的字符串
+/*
+console.log("az".charCodeAt(0));  //97
+console.log("az".charCodeAt(1));  //122
+console.log(String.fromCharCode(97));  //a
+console.log(String.fromCharCode(122));  //z
+*/
+```
+
+```
+
 ```
 
 
