--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1976,6 +1976,393 @@ let result=deleteDuplicates(head1)
 console.log(result);
 ```
 
+## 88.合并两个有序数组
+
+给你两个按 **非递减顺序** 排列的整数数组 nums1 和 nums2，另有两个整数 m 和 n ，分别表示 nums1 和 nums2 中的元素数目。
+
+请你 合并 nums2 到 nums1 中，使合并后的数组同样按 非递减顺序 排列。
+
+注意：最终，合并后数组不应由函数返回，而是存储在数组 nums1 中。为了应对这种情况，nums1 的初始长度为 m + n，其中前 m 个元素表示应合并的元素，后 n 个元素为 0 ，应忽略。nums2 的长度为 n 。
+
+提示：
+
+nums1.length == m + n
+nums2.length == n
+0 <= m, n <= 200
+1 <= m + n <= 200
+-10^9 <= nums1[i], nums2[j] <= 10^9
+
+**进阶：**你可以设计实现一个时间复杂度为 `O(m + n)` 的算法解决此问题吗？
+
+方法二：双指针,直接放会出现覆盖
+
+```js
+var merge = function(nums1, m, nums2, n) {
+    let p1 = 0, p2 = 0;
+    const sorted = new Array(m + n).fill(0);
+    var cur;
+    while (p1 < m || p2 < n) {
+        if (p1 === m) {
+            cur = nums2[p2++];
+        } else if (p2 === n) {
+            cur = nums1[p1++];
+        } else if (nums1[p1] < nums2[p2]) {
+            cur = nums1[p1++];
+        } else {
+            cur = nums2[p2++];
+        }
+        sorted[p1 + p2 - 1] = cur;
+    }
+    for (let i = 0; i != m + n; ++i) {
+        nums1[i] = sorted[i];
+    }
+};
+```
+
+方法三：逆向双指针,不会产生覆盖现象
+
+```js
+var merge = function(nums1, m, nums2, n) {
+    let p1 = m - 1, p2 = n - 1;
+    let tail = m + n - 1;
+    var cur;
+    while (p1 >= 0 || p2 >= 0) {
+        if (p1 === -1) {
+            cur = nums2[p2--];
+        } else if (p2 === -1) {
+            cur = nums1[p1--];
+        } else if (nums1[p1] > nums2[p2]) {
+            cur = nums1[p1--];
+        } else {
+            cur = nums2[p2--];
+        }
+        nums1[tail--] = cur;
+    }
+};
+```
+
+
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number} m
+ * @param {number[]} nums2
+ * @param {number} n
+ * @return {void} Do not return anything, modify nums1 in-place instead.
+ */
+var merge = function(nums1, m, nums2, n) {
+    let len=m+n-1;
+    while(m>=1 && n>=1){
+        if (nums1[m-1]>=nums2[n-1]) {
+            //如果访问到num1元素大于等于比nums2的
+            nums1[len--]=nums1[--m];
+        }else{
+            //如果访问到num1元素小于比nums2的
+            nums1[len--]=nums2[--n];
+        }
+    }
+    while(m>=1){
+        //n=0时候
+        nums1[len--]=nums1[--m];
+    }
+    while(n>=1){
+        //m=0时
+        nums1[len--]=nums2[--n];
+    }
+};
+
+let test =[1,2,3,0,0,0];
+let test2=[2,5,6];
+//let result=merge(test);
+//console.log(result);
+merge(test,3,test2,3);
+console.log(test);
+```
+
+方法一：直接合并后排序
+
+```js
+var merge = function(nums1, m, nums2, n) {
+    nums1.splice(m, nums1.length - m, ...nums2);
+    nums1.sort((a, b) => a - b);
+};
+```
+
+
+
+## 94.二叉树的中序遍历
+
+给定一个二叉树的根节点 root ，返回它的 中序 遍历。
+提示：
+
+树中节点数目在范围 [0, 100] 内
+-100 <= Node.val <= 100
+
+递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+function TreeNode(val,left,right){
+    this.val=(val===undefined ? 0 : val);
+    this.left=(left===undefined ? null : left);
+    this.right=(right===undefined ? null : right);
+}
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function(root) {
+    
+    if (root===null) {
+        return [];
+    }
+    let result=[];
+
+    result=result.concat(inorderTraversal(root.left));
+    result.push(root.val);
+    result=result.concat(inorderTraversal(root.right));
+    return result;
+};
+
+let test =[1,null,2,3];
+
+let root=new TreeNode(test[0]);
+let result=inorderTraversal(test);
+console.log(result);
+
+
+```
+
+进阶: 递归算法很简单，你可以通过迭代算法完成吗？
+
+方法二：迭代
+
+方法一的递归函数我们也可以用迭代的方式实现，两种方式是等价的，区别在于递归的时候隐式地维护了一个栈，而我们在迭代的时候需要显式地将这个栈模拟出来，其他都相同，具体实现可以看下面的代码。
+
+```js
+var inorderTraversal = function(root) {
+    let result=[];
+    let stack=[];
+
+    while(root || stack.length){
+        while(root){
+            stack.push(root);
+            root=root.left;
+        }
+        root=stack.pop();
+        result.push(root.val);
+        root=root.right;
+    }
+    return result;
+};
+```
+
+方法三：Morris 中序遍历
+
+![Morris 中序遍历二叉树](E:\pogject\学习笔记\image\leetcode\Morris 中序遍历二叉树.png)
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function(root) {
+    let result=[];
+    let predecessor=null;
+
+    while(root){
+        if (root.left) {
+            //predecessor 节点就是当前 root 节点向左走一步，然后一直向右走至无法走为止
+            predecessor=root.left;
+            while(predecessor.right && predecessor.right!==root){
+                predecessor=predecessor.right;
+            }
+            // 让 predecessor 的右指针指向 root，继续遍历左子树
+            if (!predecessor.right) {
+                predecessor.right=root;
+                root=root.left;
+            }else{
+                //说明左子树已经访问完了，我们需要断开链接
+                result.push(root.val);
+                predecessor.right=null;
+                root=root.right;
+            }
+        }else{
+            //如果没有左孩子，则直接访问右孩子
+            result.push(root.val);
+            root=root.right;
+        }
+
+    }
+    return result;
+};
+```
+
+## 100.相同的树
+
+给你两棵二叉树的根节点 p 和 q ，编写一个函数来检验这两棵树是否相同。
+
+如果两个树在结构上相同，并且节点具有相同的值，则认为它们是相同的。
+提示：
+
+两棵树上的节点数目都在范围 [0, 100] 内
+-104 <= Node.val <= 104
+
+方法一：深度优先搜索
+
+如果两个二叉树都为空，则两个二叉树相同。如果两个二叉树中有且只有一个为空，则两个二叉树一定不相同。
+
+如果两个二叉树都不为空，那么首先判断它们的根节点的值是否相同，若不相同则两个二叉树一定不同，若相同，再分别判断两个二叉树的左子树是否相同以及右子树是否相同。这是一个递归的过程，因此可以使用深度优先搜索，递归地判断两个二叉树是否相同。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} p
+ * @param {TreeNode} q
+ * @return {boolean}
+ */
+var isSameTree = function(p, q) {
+    if (p===null && q===null) {
+        return true;
+    }else if (p===null || q===null) {
+        return false;
+    }else{
+        if (p.val===q.val) {
+            return isSameTree(p.left,q.left) && isSameTree(p.right,q.right);
+        }else{
+            return false;
+        }
+    }
+};
+```
+
+方法二：广度优先搜索
+
+也可以通过广度优先搜索判断两个二叉树是否相同。同样首先判断两个二叉树是否为空，如果两个二叉树都不为空，则从两个二叉树的根节点开始广度优先搜索。
+
+使用**两个队列**分别存储两个二叉树的节点。初始时将两个二叉树的根节点分别加入两个队列。每次从两个队列各取出一个节点，进行如下比较操作。
+
+1. 比较两个节点的值，如果两个节点的值不相同则两个二叉树一定不同；
+2. 如果两个节点的值相同，则判断两个节点的子节点是否为空，如果只有一个节点的左子节点为空，或者只有一个节点的右子节点为空，则两个二叉树的结构不同，因此两个二叉树一定不同；
+3. 如果两个节点的子节点的结构相同，则将两个节点的非空子节点分别加入两个队列，子节点加入队列时需要注意顺序，如果左右子节点都不为空，则先加入左子节点，后加入右子节点。
+
+**如果搜索结束时两个队列同时为空，则两个二叉树相同**。如果只有一个队列为空，则两个二叉树的结构不同，因此两个二叉树不同。
+
+```js
+var isSameTree = function(p, q) {
+    if (p===null && q===null) {
+        return true;
+    }
+    if(p===null || q===null) {
+        return false;
+    }
+    let arr1=[p];
+    let arr2=[q];
+
+    while(arr1.length>0 && arr2.length>0){
+        let node1=arr1.shift();
+        let node2=arr2.shift();
+        if (node1.val!==node2.val) {
+            return false;
+        }
+        let left1=node1.left,right1=node1.right;
+        let left2=node2.left,right2=node2.right;
+
+        if ((!left1)^(!left2) || (!right1)^(!right2)) {
+            return false;
+        }
+        if (left1) {
+            arr1.push(left1);
+        }
+        if (right1) {
+            arr1.push(right1);
+        }
+        if (left2) {
+            arr2.push(left2);
+        }
+        if (right2) {
+            arr2.push(right2);
+        }
+    }
+    if (arr1.length===0 && arr2.length===0) {
+        return true;
+    }else{
+        return false;
+    }
+
+};
+```
+
+## 101.对称二叉树
+
+给定一个二叉树，检查它是否是镜像对称的。
+
+```
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isSymmetric = function(root) {
+    if (root===null) {
+        return true;
+    }
+    if (root.left===null && root.right===null) {
+        return true;
+    }else if(root.left===null || root.right===null){
+        return false;
+    }else{
+        if (root.left.val!==root.right.val) {
+            return false;
+        }else{
+            let root1=root.left;
+            let root2=root.right;
+        }
+    }
+    let left1=root.left;
+    let right1=root.right;
+    while(left1 && right1){
+        if (left1.val!==right1.value) {
+            return false;
+        }
+
+    }
+};
+
+
+
+```
+
+进阶：
+
+你可以运用递归和迭代两种方法解决这个问题吗？
+
+```
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
