--- a/学习记录.md
+++ b/学习记录.md
@@ -22,6 +22,7 @@
 
 2022.01.05
 
-力扣：替换所有的问号（条件遍历）,删除排序链表中的重复元素
+力扣：替换所有的问号（条件遍历）,删除排序链表中的重复元素, 合并两个有序数组 (直接合并后排序,逆向双指针), 中序遍历二叉树(递归，迭代，Morris)
 
-牛客：
+牛客：二进制转换，乘法精度
+
