--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1888,6 +1888,55 @@ var climbStairs = function(n) {
 
 方法三：通项公式
 
+## 71. 简化路径
+
+给你一个字符串 path ，表示指向某一文件或目录的 Unix 风格 绝对路径 （以 '/' 开头），请你将其转化为更加简洁的规范路径。
+
+在 Unix 风格的文件系统中，一个点（.）表示当前目录本身；此外，两个点 （..） 表示将目录切换到上一级（指向父目录）；两者都可以是复杂相对路径的组成部分。任意多个连续的斜杠（即，'//'）都被视为单个斜杠 '/' 。 对于此问题，任何其他格式的点（例如，'...'）均被视为文件/目录名称。
+
+请注意，返回的 规范路径 必须遵循下述格式：
+
+始终以斜杠 '/' 开头。
+两个目录名之间必须只有一个斜杠 '/' 。
+最后一个目录名（如果存在）不能 以 '/' 结尾。
+此外，路径仅包含从根目录到目标文件或目录的路径上的目录（即，不含 '.' 或 '..'）。
+返回简化后得到的 规范路径 。
+
+1 <= path.length <= 3000
+path 由英文字母，数字，'.'，'/' 或 '_' 组成。
+path 是一个有效的 Unix 风格绝对路径。
+
+```js
+/**
+ * @param {string} path
+ * @return {string}
+ */
+var simplifyPath = function(path) {
+    path=path.split("/")
+    let result=[];
+    path.forEach((item)=>{
+        if (item!=="" && item!==".") {
+            //对于「空字符串」以及「一个点」，我们实际上无需对它们进行处理
+            if (item==="..") {
+                //当我们遇到「两个点」时，需要将目录切换到上一级，因此只要栈不为空，我们就弹出栈顶的目录
+                result.pop();
+            }else{
+                //当我们遇到「目录名」时，就把它放入栈。
+                result.push(item);
+            }
+        }
+    });
+    //console.log(path);
+    return "/"+result.join("/");
+};
+
+//let test = "/a/./b/../../c/";
+let test = "/../";
+let result=simplifyPath(test);
+console.log(result);
+
+```
+
 
 
 ## 83.删除排序链表中的重复元素
@@ -2312,7 +2361,106 @@ var isSameTree = function(p, q) {
 
 给定一个二叉树，检查它是否是镜像对称的。
 
+方法一：递归
+
+如果一个树的左子树与右子树镜像对称，那么这个树是对称的。
+
+因此，该问题可以转化为：两个树在什么情况下互为镜像？
+
+如果同时满足下面的条件，两个树互为镜像：
+
+- 它们的两个根结点具有相同的值
+
+- 每个树的右子树都与另一个树的左子树镜像对称
+
+我们可以实现这样一个递归函数，**通过「同步移动」两个指针的方法来遍历这棵树，p 指针和 q 指针一开始都指向这棵树的根，随后 p 右移时，q左移，p 左移时，q 右移**。每次检查当前 p 和 q 节点的值是否相等，如果相等再判断左右子树是否对称。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+
+function check(p,q){
+    if (p===null && q===null) {
+        return true;
+    }
+    if (p===null || q===null) {
+        return false;
+    }
+    return p.val===q.val && check(p.left,q.right) && check(p.right,q.left);
+}
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isSymmetric = function(root) {
+    return check(root,root);
+};
+
 ```
+
+方法二：迭代
+
+方法一」中我们用递归的方法实现了对称性的判断，那么如何用迭代的方法实现呢？**首先我们引入一个队列，这是把递归程序改写成迭代程序的常用方法**。初始化时我们把根节点入队两次。每次提取两个结点并比较它们的值（队列中每两个连续的结点应该是相等的，而且它们的子树互为镜像），然后将两个结点的左右子结点按相反的顺序插入队列中。当队列为空时，或者我们检测到树不对称（即从队列中取出两个不相等的连续结点）时，该算法结束。
+
+```js
+function check(p,q){
+    let arr=[p,q];
+    while(arr.length>0){
+        node1=arr.shift();
+        node2=arr.shift();
+        if (!node1 && !node2) {
+            //都为空,跳过，检查后面的
+            continue;
+        }
+        if ((!node1 || !node2) || node1.val!==node2.val) {
+            //值不等或一个为空，一个不为空
+            return false;
+        }
+        arr.push(node1.left);
+        arr.push(node2.right);
+        arr.push(node1.right);
+        arr.push(node2.left);
+    }
+    return true;
+}
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isSymmetric = function(root) {
+    return check(root,root);
+};
+```
+
+进阶：
+
+你可以运用递归和迭代两种方法解决这个问题吗？
+
+```
+
+```
+
+## 104.二叉树的最大深度
+
+给定一个二叉树，找出其最大深度。
+
+二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+
+说明: 叶子节点是指没有子节点的节点。
+
+方法一：深度优先搜索
+
+如果我们知道了左子树和右子树的最大深度 l 和 r，那么该二叉树的最大深度即为 max(l,r)+1
+
+而左子树和右子树的最大深度又可以以同样的方式进行计算。因此我们可以用「深度优先搜索」的方法来计算二叉树的最大深度。具体而言，在计算当前二叉树的最大深度时，可以先递归计算出其左子树和右子树的最大深度，然后在 O(1) 时间内计算出当前二叉树的最大深度。递归在访问到空节点时退出。
+
+```js
 /**
  * Definition for a binary tree node.
  * function TreeNode(val, left, right) {
@@ -2323,41 +2471,61 @@ var isSameTree = function(p, q) {
  */
 /**
  * @param {TreeNode} root
- * @return {boolean}
+ * @return {number}
  */
-var isSymmetric = function(root) {
-    if (root===null) {
-        return true;
-    }
+var maxDepth = function(root) {
+    if (root===null) { return 0; }
     if (root.left===null && root.right===null) {
-        return true;
-    }else if(root.left===null || root.right===null){
-        return false;
+        return 1;
     }else{
-        if (root.left.val!==root.right.val) {
-            return false;
-        }else{
-            let root1=root.left;
-            let root2=root.right;
-        }
-    }
-    let left1=root.left;
-    let right1=root.right;
-    while(left1 && right1){
-        if (left1.val!==right1.value) {
-            return false;
-        }
-
+        return 1+Math.max(maxDepth(root.left),maxDepth(root.right));
     }
 };
-
-
-
 ```
 
-进阶：
+方法二：广度优先搜索
 
-你可以运用递归和迭代两种方法解决这个问题吗？
+我们也可以用「广度优先搜索」的方法来解决这道题目，但我们需要对其进行一些修改，此时我们广度优先搜索的**队列里存放的是「当前层的所有节点」**。每次拓展下一层的时候，不同于广度优先搜索的每次只从队列里拿出一个节点，我们**需要将队列里的所有节点都拿出来进行拓展，这样能保证每次拓展完的时候队列里存放的是当前层的所有节点，即我们是一层一层地进行拓展**，最后我们用一个变量 ans 来维护拓展的次数，该二叉树的最大深度即为 ans。
+
+```js
+var maxDepth = function(root) {
+    if (root===null) { return 0; }
+    if (root.left===null && root.right===null) {
+        return 1;
+    }
+    let arr=[root];
+    let count=0;
+    while(arr.length>0){
+        let len=arr.length;
+        while(len>0){
+            //需要将队列里的所有节点都拿出来进行拓展
+            node=arr.shift();
+            if (node.left!==null) {
+                //加入的这层在下一次外循环拿出判断
+                arr.push(node.left);
+            }
+            if (node.right!==null) {
+                arr.push(node.right);
+            }
+            len--;
+        }
+        count++;
+    }
+    return count;
+};
+```
+
+## 108. 将有序数组转换为二叉搜索树
+
+给你一个整数数组 nums ，其中元素已经按 升序 排列，请你将其转换为一棵 高度平衡 二叉搜索树。
+
+高度平衡 二叉树是一棵满足「**每个节点的左右两个子树的高度差的绝对值不超过 1** 」的二叉树。
+
+提示：
+
+1 <= nums.length <= 104
+-104 <= nums[i] <= 104
+nums 按 严格递增 顺序排列
 
 ```
 
