--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2527,8 +2527,293 @@ var maxDepth = function(root) {
 -104 <= nums[i] <= 104
 nums 按 严格递增 顺序排列
 
+二叉搜索树的中序遍历是升序序列，题目给定的数组是按照升序排序的有序数组，因此可以确保数组是二叉搜索树的中序遍历序列。
+
+给定二叉搜索树的中序遍历，是否可以唯一地确定二叉搜索树？答案是否定的。如果没有要求二叉搜索树的高度平衡，则任何一个数字都可以作为二叉搜索树的根节点，因此可能的二叉搜索树有多个。
+
+如果增加一个限制条件，即要求二叉搜索树的高度平衡，是否可以唯一地确定二叉搜索树？答案仍然是否定的。
+
+直观地看，我们可以选择中间数字作为二叉搜索树的根节点，这样分给左右子树的数字个数相同或只相差 11，可以使得树保持平衡。**如果数组长度是奇数，则根节点的选择是唯一的**，**如果数组长度是偶数，则可以选择中间位置左边的数字作为根节点或者选择中间位置右边的数字作为根节点**，选择不同的数字作为根节点则创建的平衡二叉搜索树也是不同的。
+
+确定平衡二叉搜索树的根节点之后，其余的数字分别位于平衡二叉搜索树的左子树和右子树中，左子树和右子树分别也是平衡二叉搜索树，因此可以通过递归的方式创建平衡二叉搜索树
+
+确定平衡二叉搜索树的根节点之后，其余的数字分别位于平衡二叉搜索树的左子树和右子树中，左子树和右子树分别也是平衡二叉搜索树，因此可以通过递归的方式创建平衡二叉搜索树。
+
+当然，这只是我们直观的想法，为什么这么建树一定能保证是「平衡」的呢？这里可以参考「1382. 将二叉搜索树变平衡」，这两道题的构造方法完全相同，这种方法是正确的，1382 题解中给出了这个方法的正确性证明：1382 官方题解，感兴趣的同学可以戳进去参考。
+
+递归的基准情形是平衡二叉搜索树不包含任何数字，此时平衡二叉搜索树为空。
+
+在给定中序遍历序列数组的情况下，每一个子树中的数字在数组中一定是连续的，因此可以通过数组下标范围确定子树包含的数字，下标范围记为[left,right]。对于整个中序遍历序列，下标范围从left=0 到 right=nums.length−1。当 left>right 时，平衡二叉搜索树为空。
+
+以下三种方法中，方法一总是选择中间位置左边的数字作为根节点，方法二总是选择中间位置右边的数字作为根节点，方法三是方法一和方法二的结合，选择任意一个中间位置数字作为根节点。
+
+方法一：中序遍历，总是选择中间位置左边的数字作为根节点
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+function TreeNode(val,left,right){
+    this.val=(val===undefined ? 0 : val);
+    this.left=(left===undefined ? null : left);
+    this.right=(right===undefined ? null : right);
+}
+/**
+ * @param {number[]} nums
+ * @return {TreeNode}
+ */
+var sortedArrayToBST = function(nums) {
+    return helper(nums,0,nums.length-1);
+};
+function helper(nums,left,right){
+    if (left>right) {
+        return null;
+    }
+    // 总是选择中间位置左边的数字作为根节点
+    let mid=(left+right)>>1;  //左边
+    let root=new TreeNode(nums[mid]);
+    root.left=helper(nums,left,mid-1);
+    root.right=helper(nums,mid+1,right);
+    return root;
+}
+
+let test =[-10,-3,0,5,9];
+let result=sortedArrayToBST(test);
+console.log(result);
 ```
 
+方法二：中序遍历，总是选择中间位置右边的数字作为根节点
+
+```js
+var sortedArrayToBST = function(nums) {
+    return helper(nums,0,nums.length-1);
+};
+function helper(nums,left,right){
+    if (left>right) {
+        return null;
+    }
+    // 总是选择中间位置右边的数字作为根节点
+    let mid=(left+right+1)>>1;  //右边
+    let root=new TreeNode(nums[mid]);
+    root.left=helper(nums,left,mid-1);
+    root.right=helper(nums,mid+1,right);
+    return root;
+}
+```
+
+方法三：中序遍历，**选择任意一个中间位置数字作为根节点**
+
+```js
+var sortedArrayToBST = function(nums) {
+    return helper(nums,0,nums.length-1);
+};
+function helper(nums,left,right){
+    if (left>right) {
+        return null;
+    }
+    // 总是选择中间位置右边的数字作为根节点
+    let mid=(left+right+Math.round(Math.random()))>>1;  //左右随机一个
+    let root=new TreeNode(nums[mid]);
+    root.left=helper(nums,left,mid-1);
+    root.right=helper(nums,mid+1,right);
+    return root;
+}
+```
+
+## 110.平衡二叉树
+
+给定一个二叉树，判断它是否是高度平衡的二叉树。
+
+本题中，一棵高度平衡二叉树定义为：
+
+一个二叉树每个节点 的左右两个子树的高度差的绝对值不超过 1 。
+
+方法一：自顶向下的递归
+
+有了计算节点高度的函数，即可判断二叉树是否平衡。具体做法类似于二叉树的前序遍历，即对于当前遍历到的节点，首先计算左右子树的高度，如果左右子树的高度差是否不超过 1，再分别递归地遍历左右子节点，并判断左子树和右子树是否平衡。这是一个自顶向下的递归的过程。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isBalanced = function(root) {
+    if (root===null) {
+        return true;
+    }
+    let leftDeep=maxDepth(root.left);
+    let rightDeep=maxDepth(root.right);
+    if (Math.abs(leftDeep-rightDeep)>1) {
+        //左右子树高度差的绝对值不超过 1
+        return false;
+    }
+    
+    let leftIsBalance=isBalanced(root.left);
+    let rightIsBalance=isBalanced(root.right);
+    
+    if (leftIsBalance && rightIsBalance) {
+    	//左右子树也必需是平衡二叉树
+        return true;
+    }else{
+        return false;
+    }
+};
+
+var maxDepth = function(root) {
+    if (root===null) { return 0; }
+    if (root.left===null && root.right===null) {
+        return 1;
+    }else{
+        return 1+Math.max(maxDepth(root.left),maxDepth(root.right));
+    }
+};
+```
+
+方法二：自底向上的递归
+
+方法一由于是自顶向下递归，**因此对于同一个节点，函数 height 会被重复调用**，导致时间复杂度较高。**如果使用自底向上的做法，则对于每个节点，函数height 只会被调用一次。**
+
+自底向上递归的做法类似于后序遍历，对于当前遍历到的节点，先递归地判断其左右子树是否平衡，再判断以当前节点为根的子树是否平衡。如果一棵子树是平衡的，则返回其高度（高度一定是非负整数），否则返回 −1。如果存在一棵子树不平衡，则整个二叉树一定不平衡。
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isBalanced = function(root) {
+    return getHeight(root)>=0;
+};
+
+function getHeight(root){
+    if (root===null) {
+        return 0;
+    }
+    let leftHeight=getHeight(root.left);
+    let rightHeight=getHeight(root.right);
+    if (leftHeight===-1  || rightHeight===-1 || Math.abs(leftHeight-rightHeight)>1) {
+        //只要遇到不平衡时就返回-1，整棵树也是不平衡的
+        return -1;
+    }else{
+        //平衡时
+        return Math.max(leftHeight,rightHeight)+1;
+    }
+}
+```
+
+111. 二叉树的最小深度
+给定一个二叉树，找出其最小深度。
+
+最小深度是从根节点到最近叶子节点的最短路径上的节点数量。
+
+说明：叶子节点是指没有子节点的节点。
+
+方法一：深度优先搜索
+
+首先可以想到使用深度优先搜索的方法，遍历整棵树，记录最小深度。
+
+对于每一个非叶子节点，我们只需要分别计算其左右子树的最小叶子节点深度。这样就将一个大问题转化为了小问题，可以递归地解决该问题。
+
+```js
+
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var minDepth = function(root) {
+    if (root===null){
+        //如果结点为空
+        return 0;
+    }else if (root.left===null && root.right===null){
+        //如果没有子树，则深度为1
+        return 1;
+    }else if (root.left===null && root.right!==null) {
+        //如果只存在右子树
+        return 1+minDepth(root.right);
+    }else if (root.left!==null && root.right===null) {
+        //如果只存在左子树
+        return 1+minDepth(root.left);
+    }else{
+        //左右子树都存在
+        return 1+Math.min(minDepth(root.left),minDepth(root.right));
+    }
+};
+```
+
+方法二：广度优先搜索
+
+同样，我们可以想到使用广度优先搜索的方法，遍历整棵树。
+
+当我们找到一个叶子节点时，直接返回这个叶子节点的深度。广度优先搜索的性质保证了最先搜索到的叶子节点的深度一定最小。
+
+```js
+var minDepth = function(root) {
+    if (root===null) {
+        return 0;
+    }
+    let count=0;
+    let arr=[root];
+    let flag=true;
+    while(flag){
+        let len=arr.length;
+        while(len>0){
+            let node=arr.shift();
+            if (node.left===null && node.right===null) {
+                //当在一层遇到叶子结点，则退出循环
+                flag=false;
+            }
+            if (node.left!==null) {
+                arr.push(node.left);
+            }
+            if (node.right!==null) {
+                arr.push(node.right);
+            }
+            len--;
+        }
+        //如果这层没有叶子结点
+        count++;
+    }
+    return count;
+};
+
+var minDepth = function(root) {
+    if (root===null) {
+        return 0;
+    }
+    let count=0;
+    let arr=[root];
+
+    while(true){
+        let len=arr.length;
+        count++;
+        while(len>0){
+            let node=arr.shift();
+            if (node.left===null && node.right===null) {
+                //当在一层遇到叶子结点，则退出循环,返回深度
+                return count;
+            }
+            if (node.left!==null) {
+                arr.push(node.left);
+            }
+            if (node.right!==null) {
+                arr.push(node.right);
+            }
+            len--;
+        }
+    }
+};
 ```
 
 
