--- a/学习记录.md
+++ b/学习记录.md
@@ -22,13 +22,20 @@
 
 2022.01.05
 
-力扣：替换所有的问号（条件遍历）,删除排序链表中的重复元素, 合并两个有序数组 (直接合并后排序,逆向双指针), 中序遍历二叉树(递归，迭代，Morris)
+力扣：替换所有的问号（条件遍历）,删除排序链表中的重复元素, 合并两个有序数组 (直接合并后排序,逆向双指针), 中序遍历二叉树(递归，迭代，Morris)，检验这两棵树是否相同
 
 牛客：二进制转换，乘法精度
 
 2022.01.06
 
-力扣：对称二叉树(递归，迭代)
+力扣：对称二叉树(递归，迭代)，二叉树的最大深度（深度优先搜索，广度优先搜索），将有序数组转换为二叉搜索树，判断高度平衡的二叉树，二叉树的最小深度
+
+牛客：找出对象 obj **不在**原型链上的属性，批量改变对象的属性，正则匹配
+
+js学习: js事件
+
+2022.01.07
+
+力扣：括号的最大嵌套深度(计数，栈)
 
 牛客：
-
