--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2713,7 +2713,8 @@ function getHeight(root){
 }
 ```
 
-111. 二叉树的最小深度
+## 111.二叉树的最小深度
+
 给定一个二叉树，找出其最小深度。
 
 最小深度是从根节点到最近叶子节点的最短路径上的节点数量。
@@ -3827,6 +3828,107 @@ console.log(String.fromCharCode(122));  //z
 
 ```
 
+```
+
+## 1614.括号的最大嵌套深度
+
+如果字符串满足以下条件之一，则可以称之为 **有效括号字符串**（valid parentheses string，可以简写为 VPS）：
+
+- 字符串是一个空字符串 ""，或者是一个不为 "(" 或 ")" 的单字符。
+
+- 字符串可以写为 AB（A 与 B 字符串连接），其中 A 和 B 都是 有效括号字符串 。
+
+- 字符串可以写为 (A)，其中 A 是一个 有效括号字符串 。
+
+类似地，可以定义任何有效括号字符串 S 的 嵌套深度 depth(S)：
+
+- depth("") = 0
+
+- depth(C) = 0，其中 C 是单个字符的字符串，且该字符不是 "(" 或者 ")"
+- depth(A + B) = max(depth(A), depth(B))，其中 A 和 B 都是 有效括号字符串
+- depth("(" + A + ")") = 1 + depth(A)，其中 A 是一个 有效括号字符串
+
+例如：""、"()()"、"()(()())" 都是 有效括号字符串（嵌套深度分别为 0、1、2），而 ")(" 、"(()" 都不是 有效括号字符串 。
+
+**给你一个 有效括号字符串 s，返回该字符串的 s 嵌套深度 。**
+
+提示：
+
+1 <= s.length <= 100
+s 由数字 0-9 和字符 '+'、'-'、'*'、'/'、'('、')' 组成
+题目数据保证括号表达式 s 是 有效的括号表达式
+
+栈处理
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var maxDepth = function(s) {
+    let arr=[];
+    let maxDeep=0;
+    let count=0;
+    for (let i=s.length-1;i>=0;i--){
+        if (s[i]===")") {
+            //右括号就入栈
+            if (arr.length!==0) {
+                if (count>0) {
+                    //如果前面已经出栈，但栈不为空，局部值减1
+                    count--;
+                }
+            }
+            arr.unshift(s[i]);
+            //console.log(arr,count);
+        }
+        if (s[i]==="(") {
+            //是左括号则弹出一个右括号,局部计数加一
+            arr.shift();
+            count++;
+            if (arr.length===0) {
+                //当出栈后栈为空，则一个区域匹配完，判断最大值
+                maxDeep=count>maxDeep ? count : maxDeep;
+                count=0;
+            }
+            //console.log(arr,count);
+        }
+    }
+    return maxDeep;
+};
+
+let test = "(1)+((2))+(((((4)((()))))((3))))";
+let result=maxDepth(test)
+console.log(result);
+```
+
+方法一：遍历
+
+对于括号计算类题目，我们往往可以用栈来思考。
+
+遍历字符串 s，如果遇到了一个左括号，那么就将其入栈；如果遇到了一个右括号，那么就弹出栈顶的左括号，与该右括号匹配。这一过程中的栈的大小的最大值，即为 s 的嵌套深度。
+
+代码实现时，由于我们只需要考虑栈的大小，我们可以用一个变量 size 表示栈的大小，当遇到左括号时就将其加一，遇到右括号时就将其减一，从而表示栈中元素的变化。这一过程中 size 的最大值即为 s 的嵌套深度。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+//不用栈空间是一样的
+var maxDepth = function(s) {
+    let maxDeep=0;
+    let count=0;
+    for (let i=s.length-1;i>=0;i--){
+        if (s[i]===")") {
+            count++;
+            maxDeep=count>maxDeep ? count : maxDeep;
+        }
+        if (s[i]==="(") {
+            count--;
+        }
+    }
+    return maxDeep;
+};
 ```
 
 
